--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "tinder for developer",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon src/app.js",
+    "start": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -14,6 +14,7 @@
   "author": "Abhishek",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mongoose": "^8.15.1"
   }
 }
