--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Abhishek",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^4.21.2",
     "mongoose": "^8.15.1",
     "validator": "^13.15.15"
